--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK
-      uses: actions/setup-java@v3
+      uses: yeikel/setup-java@cache/mvn-wrapper
       with:
         distribution: 'temurin'
         java-version: ${{ matrix.java_version }}
